
+ Enhancements

- Variables and functions defined in the 'Startup' macro are now
  available to all macros and BeanShell commands
- Edit mode for "B formal method" (Bruno Tatibouet)
  (see http://www.comlab.ox.ac.uk/archive/formal-methods/b.html)
- New directories are created in the currently selected directory,
  instead of the root directory of the tree
- Slightly faster local filesystem code

+ Bug Fixes

- 'Current Directory' menu didn't ignore backup files properly
- 'Expand All Folds' command was broken
- AWK mode didn't work
- Keyboard shortcuts assigned to macros didn't work
- next/prev-char/word/line didn't properly handle cases where the first
  or last physical line was not visible
- Clicking in the text area past the last visible line wasn't handled
  properly if the last virtual line was not the last physical one
- The filesystem browser would display 'multiple request' errors when
  deleting an expanded directory with no files inside it

* Version 3.1pre2

+ New Features

- If a macro named 'Startup' exists, it is now run on startup
- 'Expand All Folds' command

+ Enhancements

- HTML-like modes (ASP, JSP, PHP, SHTML, XSL) now handle <!...>
  directives in a more consistent manner
- Changed gutter mouse behavior
- The 'Rename' dialog box in the filesystem browser now displays the
  original file name in the text entry field
- 'Insert File' and 'New File' commands in filesystem browser's
  right-click menu
- The font selector now shows all available fonts on Java 2, not just
  the 5 built-in ones
- The shortcut option pane key grabbing code is now more reliable
- Improved XML mode
- The File->Current Directory menu no longer displays autosave and
  backup files

+ Bug Fixes

- Adding new abbrevs in the Abbreviations option pane didn't work
- Macro shortcuts didn't appear in menus (but they still worked)
- The 'Center Caret on Screen' command didn't work properly if portions
  of the buffer were folded